<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name">JUSTJAVA</string>
    
    <string name="COFFEE_SHOP">COFFEE SHOP</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="extra_sugar">Extra Sugar</string>
    <string name="quantity">Quantity</string>
    <string name="order_details">Order Details</string>
    <string name="order">ORDER</string>
    <string name="maps">MAPS</string>
    <string name="your_name">ENTER YOUR NAME:</string>
    <string name="day">HAPPY COFFEE DAY!</string>





    <string name="no_more_coffee">You cannot order more coffee</string>
    <string name="no_less_coffee">You cannot order lesser than this</string>
    <string name="thankyou">THANKYOU FOR ORDER!</string>
    <string name="order_details_of">ORDER DETAILS OF  </string>


    <string name="total"> Total: Rs</string>
    <string name="contact_number">Contact Number: </string>
    
    
    <string name="topping_whippedcream">Added topping whipped cream</string>
    <string name="topping_choc">Added topping Chocolate</string>
    <string name="topping_sugar">Added topping Extra Sugar</string>
    <string name="nam">Name: <xliff:g id="Name" example="Aditi">%s</xliff:g></string>


</resources>
