<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.justjava.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/mes"
            android:onClick="Message"
            android:id="@+id/mes"
            android:background="@android:color/black"
            />


    <TextView
        android:text="@string/COFFEE_SHOP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:textSize="36dp"
        android:textStyle="bold"
        android:paddingLeft="11dp"
        android:paddingBottom="10dp"
        android:paddingTop="15dp"/>



        <ImageButton
            android:layout_width="50dp"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="18dp"
            android:src="@drawable/pho"
            android:onClick="Phone"
            android:id="@+id/pho"

            />






    </LinearLayout>

    <TextView
        android:text="@string/toppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        style="@style/Common"
        />

    <CheckBox
        android:text="@string/whipped_cream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox1"
        android:textSize="16sp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="2dp"
        android:paddingLeft="24dp"
        android:onClick="Check"
         />

    <CheckBox
        android:text="@string/chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox2"
        android:textSize="16sp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="6dp"
        android:paddingLeft="24dp"
        android:onClick="Check"
        />

    <CheckBox
        android:text="@string/extra_sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox3"
        android:textSize="16sp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="24dp"
        android:onClick="Check"/>



    <TextView
        android:text="@string/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Common"
        android:textSize="25sp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:id="@+id/textView"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        >


        <Button
            android:text="-"
            android:textSize="24dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="6dp"
            android:id="@+id/dec"
            android:onClick="decrement"
            />


        <TextView
        android:text="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_margin="8dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/quantity_text_view" />



        <Button
            android:text="+"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:textSize="22dp"
            android:layout_margin="6dp"
            android:id="@+id/inc"
            android:onClick="increment"/>



    </LinearLayout>

    <TextView
        android:text="@string/order_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="8dp"
        android:textStyle="bold"
        android:layout_below="@id/quantity_text_view"
        android:id="@+id/textView2" />

    <TextView
        android:text="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_margin="8dp"
        android:layout_below="@id/textView2"
        android:id="@+id/price_text_view" />






<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:text="@string/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_text_view"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        android:id="@+id/button"
        android:onClick="submitOrder"/>

    <Button
        android:text="@string/maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        android:id="@+id/buttonm"
        android:onClick="Maps"/>

</LinearLayout>





    <TextView
        android:text="@string/your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:layout_marginTop="35dp"
        android:textStyle="bold"/>
    
    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapCharacters"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/et2"
        />
    
    <TextView
        android:text="@string/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="35dp"
        android:textColor="@android:color/holo_red_light"/>
    
</LinearLayout>



</ScrollView>